<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.owner.takeandgo.controller.AddCarActivity"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="433dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="98dp"
            android:layout_height="39dp"
            android:text="@string/Adress"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/StreetEditText"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:inputType="text" />

        <EditText
            android:id="@+id/CityEditText"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text" />

        <EditText
            android:id="@+id/StreetNumberEditText"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="number" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20" />

    <EditText
        android:id="@+id/ParkingEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/parking"
        android:inputType="number" />


    <EditText
        android:id="@+id/BranchNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />


    <Button
        android:id="@+id/addBranchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_branch" />

</LinearLayout>