<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.owner.takeandgo.controller.AddCarActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/NumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left"
            android:text="branch"
            android:textSize="18sp"
            />
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/branchSpinner"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="model:"
            android:textSize="18sp"
            />
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/carModelSpinner"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="0.01" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03" />

    <EditText
        android:id="@+id/MileageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mileage"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/addCarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_car" />

</LinearLayout>